test_regress/t/t_var_dup_bad.out
%Error: t/t_var_dup_bad.v:16: Duplicate declaration of signal: 'a'
   reg    a;
          ^
        t/t_var_dup_bad.v:15: ... Location of original declaration
   reg    a;
          ^
%Error: t/t_var_dup_bad.v:19: Duplicate declaration of signal: 'l'
   integer l;
           ^
        t/t_var_dup_bad.v:18: ... Location of original declaration
   integer l;
           ^
%Error: t/t_var_dup_bad.v:22: Duplicate declaration of signal: 'b'
   bit     b;
           ^
        t/t_var_dup_bad.v:21: ... Location of original declaration
   bit     b;
           ^
%Error: t/t_var_dup_bad.v:25: Duplicate declaration of signal: 'o'
   output o;
          ^
        t/t_var_dup_bad.v:24: ... Location of original declaration
   output o;
          ^
%Error: t/t_var_dup_bad.v:28: Duplicate declaration of signal: 'i'
   input  i;
          ^
        t/t_var_dup_bad.v:27: ... Location of original declaration
   input  i;
          ^
%Error: t/t_var_dup_bad.v:31: Duplicate declaration of signal: 'oi'
   input  oi;
          ^~
        t/t_var_dup_bad.v:30: ... Location of original declaration
   output oi;
          ^~
%Error: t/t_var_dup_bad.v:38: Duplicate declaration of signal: 'org'
   output reg org;
              ^~~
        t/t_var_dup_bad.v:37: ... Location of original declaration
   output reg org;
              ^~~
%Error: t/t_var_dup_bad.v:65: Duplicate declaration of signal: 'bad_reout_port'
   output bad_reout_port;
          ^~~~~~~~~~~~~~
        t/t_var_dup_bad.v:63: ... Location of original declaration
   output bad_reout_port
          ^~~~~~~~~~~~~~
%Error: t/t_var_dup_bad.v:72: Duplicate declaration of signal: 'bad_rewire'
                            : ... note: ANSI ports must have type declared with the I/O (IEEE 1800-2017 23.2.2.2)
   wire bad_rewire;
        ^~~~~~~~~~
        t/t_var_dup_bad.v:69: ... Location of original declaration
  (output wire bad_rewire,
               ^~~~~~~~~~
%Error: t/t_var_dup_bad.v:73: Duplicate declaration of signal: 'bad_rereg'
   reg  bad_rereg;
        ^~~~~~~~~
        t/t_var_dup_bad.v:70: ... Location of original declaration
   output reg bad_rereg
              ^~~~~~~~~
%Error: t/t_var_dup_bad.v:12: Duplicate declaration of port: 'oi'
   i, oi
      ^~
        t/t_var_dup_bad.v:30: ... Location of original declaration
   output oi;
          ^~
%Error: t/t_var_dup_bad.v:49: Duplicate declaration of port: 'bad_duport'
   bad_duport
   ^~~~~~~~~~
        t/t_var_dup_bad.v:51: ... Location of original declaration
   output bad_duport;
          ^~~~~~~~~~
%Error: t/t_var_dup_bad.v:57: Duplicate declaration of port: 'bad_mixport'
   output bad_mixport
          ^~~~~~~~~~~
        t/t_var_dup_bad.v:57: ... Location of original declaration
   output bad_mixport
          ^~~~~~~~~~~
%Error: t/t_var_dup_bad.v:40: Can't find definition of variable: 'bad_duport'
   sub0 sub0(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:40: Duplicate pin connection: 'bad_duport'
   sub0 sub0(.*);
        ^~~~
        t/t_var_dup_bad.v:40: ... Location of original pin connection
   sub0 sub0(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:41: Can't find definition of variable: 'bad_mixport'
                            : ... Suggested alternative: 'bad_duport'
   sub1 sub1(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:41: Duplicate pin connection: 'bad_mixport'
   sub1 sub1(.*);
        ^~~~
        t/t_var_dup_bad.v:41: ... Location of original pin connection
   sub1 sub1(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:42: Can't find definition of variable: 'bad_reout_port'
                            : ... Suggested alternative: 'bad_duport'
   sub2 sub2(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:43: Can't find definition of variable: 'bad_rewire'
   sub3 sub3(.*);
        ^~~~
%Error: t/t_var_dup_bad.v:43: Can't find definition of variable: 'bad_rereg'
                            : ... Suggested alternative: 'bad_rewire'
   sub3 sub3(.*);
        ^~~~
%Error: Exiting due to
